// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders Icons using iconfont 1`] = `
<DocumentFragment>
  <i
    class="za-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <use
        xlink:href="#home"
      />
    </svg>
  </i>
  <i
    class="za-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <use
        xlink:href="#user"
      />
    </svg>
  </i>
</DocumentFragment>
`;

exports[`Icon renders Icons using svg component 1`] = `
<DocumentFragment>
  <i
    class="za-icon za-icon--primary za-icon--lg"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      viewBox="0 0 1000 1000"
      width="1em"
    >
      <path
        d="M1 12.376l8.8 9.114L30.431 1.568"
        fill="none"
        stroke="currentColor"
        stroke-width="2.6"
      />
    </svg>
  </i>
</DocumentFragment>
`;
